--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         var feed = new Instafeed({
             get: 'tagged',
             tagName: 'awesome',
-            clientId: 'YOUR_CLIENT_ID'
+            clientId: '1371961479',
+            accessToken: '6a796fa2fc504f64870bfcd1cb4f0854'
         });
         feed.run();
     </script>
