--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             get: 'tagged',
             tagName: 'awesome',
             clientId: '1371961479',
-            accessToken: '6a796fa2fc504f64870bfcd1cb4f0854'
+            accessToken: '1371961479.4f9b81b.857de5dd34164edbaef1e2abf943ef86'
         });
         feed.run();
     </script>
