--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         var feed = new Instafeed({
             get: 'tagged',
             tagName: 'awesome',
-            clientId: '1371961479',
-            accessToken: '1371961479.4f9b81b.857de5dd34164edbaef1e2abf943ef86'
+            clientId: '6a796fa2fc504f64870bfcd1cb4f0854'
+           
         });
         feed.run();
     </script>
